tgthrProgramManagement/force-app/main/default/objects/GoalAssignmentDetail/fields/DetailType__c.field-meta.xml
<CustomField>
    <fullName>DetailType__c</fullName>
    <description>Type of interaction that addressed this goal.</description>
    <inlineHelpText>The type of session/note that addressed this goal.</inlineHelpText>
    <label>Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AddressedItem</fullName>
                <default>true</default>
                <label>Addressed Item</label>
            </value>
            <value>
                <fullName>CaseNote</fullName>
                <label>Case Note</label>
            </value>
            <value>
                <fullName>TreatmentPlan</fullName>
                <label>Treatment Plan</label>
            </value>
            <value>
                <fullName>ClinicalSession</fullName>
                <label>Clinical Session</label>
            </value>
            <value>
                <fullName>CaseManagement</fullName>
                <label>Case Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>