tgthrProgramManagement/force-app/main/default/objects/GoalAssignmentDetail/fields/InteractionSummary__c.field-meta.xml
<CustomField>
    <fullName>InteractionSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction Summary</label>
    <referenceTo>InteractionSummary</referenceTo>
    <relationshipLabel>Goal Assignment Details</relationshipLabel>
    <relationshipName>GoalAssignmentDetails</relationshipName>
    <type>Lookup</type>
</CustomField>