tgthrProgramManagement/force-app/main/default/objects/GoalAssignmentDetail/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>Per-goal narrative notes from the interaction session describing work done on this goal.</description>
    <inlineHelpText>Notes about progress or work done on this goal during the session.</inlineHelpText>
    <label>Narrative</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>