tgthrProgramManagement/force-app/main/default/objects/GoalAssignmentDetail/fields/ProgressAfter__c.field-meta.xml
<CustomField>
    <fullName>ProgressAfter__c</fullName>
    <description>Progress percentage at the end of this session (after working on the goal). This value is rolled up to GoalAssignment.CurrentProgress__c.</description>
    <inlineHelpText>Goal progress (0-100) at the end of this interaction.</inlineHelpText>
    <label>Progress After</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>