tgthrProgramManagement/force-app/main/default/objects/GoalAssignmentDetail/fields/ProgressBefore__c.field-meta.xml
<CustomField>
    <fullName>ProgressBefore__c</fullName>
    <description>Progress percentage at the start of this session (before working on the goal).</description>
    <inlineHelpText>Goal progress (0-100) at the start of this interaction.</inlineHelpText>
    <label>Progress Before</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>