tgthrProgramManagement/force-app/main/default/objects/GoalAssignmentDetail/fields/TimeSpentMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentMinutes__c</fullName>
    <description>Time spent working on this specific goal during the session, in minutes.</description>
    <inlineHelpText>Minutes spent on this goal during the interaction.</inlineHelpText>
    <label>Time Spent (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>